--- a/hons/docs/biblio.bib
+++ b/hons/docs/biblio.bib
@@ -27,6 +27,18 @@
   year={1987}
 }
 
+@article{dbrec,
+  title={Principles of transaction-oriented database recovery},
+  author={Haerder, T. and Reuter, A.},
+  journal={ACM Computing Surveys (CSUR)},
+  volume={15},
+  number={4},
+  pages={287--317},
+  year={1983},
+  publisher={ACM}
+}
+
+
 %no, its called multiterminal cut
 @article{dah94,
   title={The complexity of multiterminal cuts},
