--- a/hons/docs/figures/backSimpleSDF.tex
+++ b/hons/docs/figures/backSimpleSDF.tex
@@ -1,5 +1,8 @@
 \begin{pspicture}(10,6)
 	
+	\uput[0](2.2, 0.3){a)}
+	\uput[0](7.2, 0.3){b)}
+	
 	\cnode(1,1){0.6}{l1}
 	\cnode(4,1){0.6}{l2}
 	\cnode(2.5,5){0.6}{l3}
