--- a/hons/docs/thesis.tex
+++ b/hons/docs/thesis.tex
@@ -78,7 +78,7 @@
   
   
   \begin{center}
-  \large Supervisor: Dr. Bernhard Scholz, Dr. Andrew Santosa\\[0.4cm]
+  \large Supervisor: Dr. Bernhard Scholz\\[0.4cm]
 
   This thesis is submitted in partial fulfillment of\\
   the requirements for the degree of\\
@@ -103,16 +103,14 @@
 \input{tIntroduction}
 \input{tBackground}
 \input{tExample}
-\input{tSystems}
 \input{tModel}
 \input{tHardness}
 \input{tAlgos}
+\input{tSystems}
 \input{tExperiment}
 \input{tRelated}
 \input{tConclusion}
-
-\chapter{Appendix}
-\input{symboltable}
+\input{tAppendix}
 
 \bibliographystyle{plain}
 \bibliography{biblio}
