--- a/hons/docs/tAbstract.tex
+++ b/hons/docs/tAbstract.tex
@@ -1,10 +1,13 @@
 \begin{abstract}
 
-The streaming paradigm provides powerful solutions to many modern high-performance computations, due mainly to the ease of decomposing computations into large-grained parallel executing units.
-As such, attention is focused on developing robust and extensible frameworks to allow streaming computations to run on heterogeneous networked (cloud) systems.
+The streaming paradigm provides powerful solutions to many modern high-performance computations.
+Programs in this domain can be easily decomposed into large-grained parallel executing units, whereas for normal sequential code this is known to be difficult.
+However, when operating in a high-performance environment, robustness to failures becomes important.
+As such, we focus our attention on developing robust and extensible frameworks to allow streaming computations to run on heterogeneous networked (cloud) systems.
 
-This thesis looks to the provisioun of fault-tolerance over such a framework running on the cloud.
-We develop the SDFSimulator, which represents arbitrary cloud machines and simulates faults and recovery mechanisms which occur dynamically during the execution of stream programs.
-We analyse the problem of assigning computational units (actors) to the processors on such a system whilst respecting certain constraints imposed by the necessity for fault tolerance, and together with proving that problem to be NP-Hard, we provide a heuristic solver which performs on average 10\% worse than the optimal solution under realistic and totally random tests.
+This thesis investigates the provisioun of fault-tolerance to a stream programming framework running on the cloud.
+We develop the SDFSimulator, which represents arbitrary cloud machines and simulates fault tolerance and recovery mechanisms which occur dynamically during the execution of stream programs.
+We analyse the problem of assigning computational units (actors) to the processors on such a system whilst respecting certain constraints imposed by the fault tolerance mechanism.
+We prove this problem to be NP-Hard, and we provide a heuristic solver, with solutions on average only 10\% worse than the optimal solutions under realistic and totally random tests.
 
 \end{abstract}
