got enuf polish?

--- a/hons/docs/tAlgos.tex
+++ b/hons/docs/tAlgos.tex
@@ -93,9 +93,8 @@ Because the $\mathbf{Y}$ tensor does not accurately represent a quadratic curve,
 
 This problem shows a fundamental weakness in the model, the integrality gap is unbounded.
 The unbounded gap arises due to the linearisation of the quadratic term, which is only a correct representation where both it and the quadratic term have integral parameters.
-Future work may include seeking an alternate formulation of the problem which has a fixed integrality gap.
+The future work section discusses the possibility of reformulating the problem to improve in integrality gap.
 An alternate formulation may attempt to have the solver working with the $\mathbf{Y}$ tensor outright, as opposed to deriving it from the $\mathbf{X}$ matrix.
-%CHEESE future work?
 
 \section{Heuristics}
 
