--- a/hons/docs/tModel.tex
+++ b/hons/docs/tModel.tex
@@ -141,4 +141,4 @@ Hence the modified ILP formulation without quadratic terms is:
 
 \input{txILP}
 
-The AMPL-encoded version of this ILP can be found in {\em The appendix i have not done yet}.%CHEESE do this
+The AMPL-encoded version of this ILP can be found in Appendix \ref{adxModel}
